<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/reportpage"
    android:orientation="vertical">


    <TextView
        android:text="@string/report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/report_title"
        android:textAllCaps="true"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginStart="52dp"/>

    <TextView
        android:text="@string/employee_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/employeename"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_machineID"
        android:ems="10"
        android:id="@+id/report_machineID"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:inputType="text" />

    <EditText
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/report_message"
        android:hint="@string/report_message"
        android:textColorHint="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:textSize="18sp"
        android:textAlignment="center"

 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="17dp">

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@mipmap/ge_logo"
        android:id="@+id/reportpagehome_btn"
        android:scaleType="fitCenter"
        android:layout_marginStart="10dp"/>

    <Button
        android:text="@string/contact"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/report_contactbtn"
        android:background="@null"
        android:layout_marginStart="170dp"/>
        </LinearLayout>


</LinearLayout>