<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/activity_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/homescreen3">

    <TextView
        android:text="@string/homescreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homescreen_title"
        android:textAllCaps="true"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <Button
            android:text="@string/sendreport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendReport_btn"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:background="@null" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="69dp"
            android:orientation="horizontal"
            android:layout_marginTop="46dp">

            <Button
                android:text="@string/viewmachines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewmachine_btn"
                android:background="@null"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_marginStart="20dp"
                android:textSize="12sp"
                android:gravity="center"
                />

        </LinearLayout>

        <Button
            android:text="@string/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/contactpage_btn"
            android:background="@null"
            android:textColor="@color/white"
            android:textAllCaps="true" />

    </LinearLayout>

    <Button
        android:text="@string/logout_btn"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:id="@+id/logout_btn"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_marginTop="370dp"

        android:layout_alignParentEnd="true" />

</RelativeLayout>
