<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login4"
    android:weightSum="1">

    <TextView
        android:text="@string/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:id="@+id/slogan"
        android:layout_below="@+id/predix"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <Button
        android:text="Login"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:id="@+id/login_btn"
        android:background="@color/dark_green"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:onClick="login"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:id="@+id/login_password"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:layout_below="@+id/login_username"
        android:layout_alignStart="@+id/login_username" />

    <TextView
        android:text="PREDIX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:id="@+id/predix"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/login_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/login_username"
        android:textColorHint="@color/white"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/slogan"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/signup_title"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:id="@+id/register_btn"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>